--- a/scss/style.css
+++ b/scss/style.css
@@ -1156,12 +1156,16 @@ body .navbar .pc .bottom .nav-gp .nav-function a {
   font-weight: bold;
   padding: 12px 24px;
   color: inherit;
+  position: relative;
 }
 body .navbar .pc .bottom .nav-gp .nav-function a i.before {
   margin-right: 4px;
 }
 body .navbar .pc .bottom .nav-gp .nav-function a.active {
   border-bottom: solid 4px #7D0000;
+  left: 0;
+  bottom: 0;
+  height: 54px;
 }
 body .navbar .pc .bottom .nav-gp .nav-list {
   display: none;
@@ -2009,10 +2013,9 @@ body .table-default table,
 body .table-default th,
 body .table-default td {
   text-align: left;
-  border: solid 1px rgba(190, 85, 85, 0.4);
 }
 body .table-default tr {
-  border-bottom: solid 1px #eee;
+  border-bottom: solid 1px #dcdddd;
 }
 body .table-default tr:hover {
   background-color: #f8f8f8 !important;
@@ -2020,7 +2023,8 @@ body .table-default tr:hover {
 body .table-default tr th {
   text-align: left;
   padding: 12px 16px;
-  color: #4A2121;
+  color: white;
+  background-color: #4A2121;
 }
 @media (max-width: 568px) {
   body .table-default tr th.ellipsis-th {
@@ -2034,7 +2038,7 @@ body .table-default tr td {
   word-break: break-all;
   text-overflow: ellipsis;
   overflow: hidden;
-  padding: 24px 16px;
+  padding: 16px;
 }
 @media (max-width: 568px) {
   body .table-default tr td {
@@ -2611,6 +2615,84 @@ body main .content-apply .card form ul {
 @media (max-width: 568px) {
   body main .content-apply .card form ul li {
     text-align: justify;
+  }
+}
+body main .content-apply .card form hr {
+  margin: 48px 0;
+}
+body main .content-apply .card .form-view {
+  margin: auto;
+  max-width: 800px;
+  padding-bottom: 24px;
+}
+@media (max-width: 568px) {
+  body main .content-apply .card .form-view {
+    padding-bottom: 0;
+  }
+}
+body main .content-apply .card .form-view .view-gp {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: row;
+  margin-bottom: 20px;
+  text-align: justify;
+}
+body main .content-apply .card .form-view .view-gp:nth-last-of-type(1) {
+  margin-bottom: 0;
+}
+body main .content-apply .card .form-view .view-gp h5 {
+  width: 100%;
+}
+body main .content-apply .card .form-view .view-link h5 {
+  width: 100%;
+  margin-bottom: 4px;
+}
+body main .content-apply .card .form-view .view-link .link {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: start;
+  flex-direction: column;
+}
+body main .content-apply .card .form-view .view-link .link a {
+  font-size: 1rem;
+  line-height: 1.75;
+  text-align: left;
+  font-weight: bold;
+}
+body main .content-apply .card .form-view .view-link .link a i {
+  margin-right: 8px;
+}
+body main .content-apply .card .form-view hr {
+  margin: 48px 0;
+}
+@media (max-width: 568px) {
+  body main .content-apply .card .form-view hr {
+    margin: 36px 0;
+  }
+}
+body main .content-apply .card .form-view h3 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+body main .content-apply .card .form-view table.reply {
+  margin-bottom: 52px;
+}
+body main .content-apply .card .form-view table.reply:last-child {
+  margin-bottom: 0;
+}
+@media (max-width: 568px) {
+  body main .content-apply .card .form-view table.reply thead th:first-child {
+    width: 35% !important;
+  }
+}
+@media (max-width: 568px) {
+  body main .content-apply .card .form-view table.reply thead th:nth-child(2) {
+    width: 65% !important;
   }
 }
 body main .content-apply-success .container {
