--- a/scss/style.scss
+++ b/scss/style.scss
@@ -394,6 +394,84 @@ body {
                             }
                         }
                     }
+                    hr {
+                        margin: $m-L 0;
+                    }
+                }
+                .form-view {
+                    margin: auto;
+                    max-width: 800px;
+                    padding-bottom: $p-S;
+                    @include mobile-L {
+                        padding-bottom: 0;
+                    }
+                    .view-gp {
+                        padding: 0;
+                        margin: 0;
+                        width: 100%;
+                        display: flex;
+                        justify-content: start;
+                        align-items: center;
+                        flex-wrap: wrap;
+                        flex-direction: row;
+                        margin-bottom: $m-S;
+                        text-align: justify;
+                        &:nth-last-of-type(1) {
+                            margin-bottom: 0;
+                        }
+                        h5 {
+                            width: 100%;
+                        }
+                    }
+                    .view-link {
+                        h5 {
+                            width: 100%;
+                            margin-bottom: $m-XXS;
+                        }
+                        .link {
+                            display: flex;
+                            flex-wrap: wrap;
+                            justify-content: start;
+                            flex-direction: column;
+                            a {
+                                font-size: $size-p;
+                                line-height: 1.75;
+                                text-align: left;
+                                font-weight: bold;
+                                i {
+                                    margin-right: $p-XXS;
+                                }
+                            }
+                        }
+                    }
+                    hr {
+                        margin: $m-L 0;
+                        @include mobile-L {
+                            margin: $m-M 0;
+                        }
+                    }
+                    h3 {
+                        text-align: center;
+                        margin-bottom: $m-S;
+                    }
+                    table.reply {
+                        margin-bottom: $m-XL;
+                        &:last-child {
+                            margin-bottom: 0;
+                        }
+                        thead {
+                            th:first-child {
+                                @include mobile-L {
+                                    width: 35% !important;
+                                }
+                            }
+                            th:nth-child(2) {
+                                @include mobile-L {
+                                    width: 65% !important;
+                                }
+                            }
+                        }
+                    }
                 }
             }
         }
