0111-1500-sign-up-succes

--- a/scss/style.css
+++ b/scss/style.css
@@ -2277,13 +2277,25 @@ body main {
     min-height: unset;
   }
 }
+@media (max-width: 1367px) {
+  body main {
+    min-height: 79vh;
+  }
+}
+@media (max-width: 1024px) {
+  body main {
+    min-height: 84vh;
+  }
+}
 @media (max-width: 768px) {
   body main {
     padding-top: 80px;
+    min-height: 78vh;
   }
 }
 @media (max-width: 568px) {
   body main {
+    min-height: unset;
     padding-top: 60px;
     padding-bottom: 24px;
   }
@@ -2723,6 +2735,11 @@ body main .content-apply-success .container {
 body main .content-apply-success .container p {
   margin-top: 4px;
   text-align: center;
+}
+@media (max-width: 768px) {
+  body main .content-apply-success .container p {
+    padding: 0 64px;
+  }
 }
 @media (max-width: 568px) {
   body main .content-apply-success .container p {
