--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -289,7 +289,7 @@
         &[type="button"] {
             border: none;
             color: white;
-            border: solid 1px $primary-dark;
+            background-color: $primary-dark;
             font-size: $size-h5;
             font-weight: bold;
             border-radius: 4px;
