--- a/scss/style.scss
+++ b/scss/style.scss
@@ -526,17 +526,30 @@ body {
                         margin: $m-L 0;
                     }
                     .btn {
-                        margin-top: 0;
+                        width: 100%;
+                        margin: 0;
+                        display: flex;
+                        justify-content: center;
+
                         @include mobile-L {
                             width: 100% !important;
                             padding: 0;
                         }
-                        // input[type="button"],
-                        // input[type="submit"] {
-                        //     @include mobile-L {
-                        //         width: 100% !important;
-                        //     }
-                        // }
+                        input[type="button"],
+                        input[type="submit"] {
+                            width: auto;
+                            margin: 0 $m-XS;
+                            @include mobile-L {
+                                width: 100% !important;
+                            }
+                        }
+                        .time{
+                            font-size: $size-p;
+                            line-height: 40px;
+                            margin-left: $m-XXS;
+                            font-weight: normal;
+                            color: $bk-20;
+                        }
                     }
                 }
             }
